--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -22,6 +22,7 @@
     "@fluentui/react-telemetry": "^0.51.0",
     "@fluentui/styles": "^0.51.0",
     "@mdx-js/react": "^1.5.5",
+    "@types/semver": "^5.5.0",
     "classnames": "^2.2.6",
     "color": "^3.1.0",
     "copy-to-clipboard": "^3.2.0",
@@ -44,10 +45,12 @@
     "react-source-render": "4.0.0-1",
     "react-textarea-autosize": "7.0.0",
     "react-virtualized": "^9.21.1",
-    "react-vis": "^1.11.6"
+    "react-vis": "^1.11.6",
+    "semver": "^6.2.0"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "^1.0.0-beta",
+    "@fluentui/scripts": "^1.0.0",
     "@types/classnames": "^2.2.9",
     "@types/color": "^3.0.0",
     "@types/faker": "^4.1.3",
@@ -59,7 +62,6 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-virtualized": "^9.21.8",
     "@types/webpack-env": "1.15.1",
-    "@fluentui/scripts": "^1.0.0",
     "gulp": "^4.0.2",
     "typescript": "3.7.2"
   },
