--- a/packages/codemods/package.json
+++ b/packages/codemods/package.json
@@ -28,7 +28,9 @@
     "@types/node": "^10.3.2",
     "@fluentui/scripts": "^1.0.0",
     "@types/react": "16.8.25",
-    "@types/semver": "^5.5.0"
+    "@types/semver": "^5.5.0",
+    "fs-extra": "^8.1.0",
+    "@types/fs-extra": "^8.0.1"
   },
   "dependencies": {
     "tslib": "^1.10.0",
