UI builder: AXE core integration (#14934)
UI builder: AXE core integration

--- a/packages/fluentui/react-builder/package.json
+++ b/packages/fluentui/react-builder/package.json
@@ -18,7 +18,8 @@
     "react-document-title": "^2.0.3",
     "react-frame-component": "^4.1.1",
     "react-is": "^16.6.3",
-    "use-immer": "^0.4.1"
+    "use-immer": "^0.4.1",
+    "axe-core": "3.5.0"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "^1.0.0-beta",
