ContextualMenu: Using MenuContext.Consumer to consume context from MenuButton (#15826)
#### Pull request checklist

- [ ] Addresses an existing issue: Fixes #0000
- [x] Include a change request file using `$ yarn change`

#### Description of changes

This PR follows up #15780 by making `ContextualMenu` consume the `MenuContext` used in `MenuButton` so that you can pass `ContextualMenu` directly as JSX:

```tsx
<MenuButton menu={<ContextualMenu {...menuProps} />} />
```

The `MenuContext` is now moved into a newly created `@fluentui/react-shared-contexts` package and out of the `@fluentui/react-button` package.

#### Focus areas to test

(optional)

--- a/packages/react-button/package.json
+++ b/packages/react-button/package.json
@@ -50,13 +50,14 @@
     "@fluentui/react-compose": "^1.0.0-beta.5",
     "@fluentui/keyboard-key": "^0.2.12",
     "@fluentui/react-icons-mdl2": "^1.0.0-beta.5",
+    "@fluentui/react-shared-contexts": "^1.0.0-beta.0",
     "@fluentui/react-theme-provider": "^1.0.0-beta.6",
     "@fluentui/theme": "^2.0.0-beta.5",
-    "@microsoft/load-themed-styles": "^1.10.26",
     "@fluentui/react-hooks": "^8.0.0-beta.5",
     "@fluentui/set-version": "^8.0.0-beta.0",
     "@fluentui/style-utilities": "^8.0.0-beta.5",
     "@fluentui/utilities": "^8.0.0-beta.5",
+    "@microsoft/load-themed-styles": "^1.10.26",
     "tslib": "^1.10.0"
   },
   "peerDependencies": {
