Add ling1726 to codeowners of N* (#15894)
Co-authored-by: Lingfan Gao <lingfan.gao@microsoft.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -38,7 +38,7 @@ sizeauditor.json @aftab-hassan
 #### Fluent UI N*
 packages/a11y-rules/ @kolaps33 @jurokapsiar
 packages/a11y-testing/ @kolaps33 @jurokapsiar
-packages/fluentui/ @assuncaocharles @layershifter @miroslavstastny @dzearing @pompomon @jurokapsiar
+packages/fluentui/ @assuncaocharles @layershifter @miroslavstastny @dzearing @pompomon @jurokapsiar @ling1726
 
 #### Web Components
 packages/web-components @chrisdholt @EisenbergEffect @nicholasrice
