--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -48,7 +48,7 @@ packages/web-components @chrisdholt @EisenbergEffect @nicholasrice
 
 #### Apps
 # component-demo/
-public-docsite/ @ecraig12345 @Jahnp
+public-docsite/ @ecraig12345
 public-docsite-resources/ @ecraig12345
 perf-test/ @JasonGore @xugao
 # ssr-tests/
@@ -121,7 +121,7 @@ packages/react-internal/src/components/Facepile/ @markionium @mtennoe
 packages/react-internal/src/components/FolderCover/ @ThomasMichon @bigbadcapers
 packages/react-internal/src/components/FocusTrapZone/ @khmakoto
 packages/react/src/components/GroupedList/  @aditima @dzearing
-packages/react-internal/src/components/HoverCard/   @atneik @Jahnp @Vitalius1
+packages/react-internal/src/components/HoverCard/  @Jahnp @Vitalius1
 packages/react-internal/src/components/Icon/ @dzearing @ecraig12345
 packages/react-internal/src/components/Image/ @dzearing
 packages/react-internal/src/components/Label/ @khmakoto
@@ -145,7 +145,7 @@ packages/react-internal/src/components/Rating/ @jdhuntington
 packages/react-internal/src/components/ResizeGroup/ @micahgodbolt
 packages/react-internal/src/components/SearchBox/ @ecraig12345
 packages/react-internal/src/components/Separator/ @natalieethell
-packages/react-internal/src/components/Shimmer/ @Vitalius1 @atneik
+packages/react-internal/src/components/Shimmer/ @Vitalius1
 packages/react-internal/src/components/SpinButton/ @khmakoto
 packages/react-internal/src/components/Spinner/ @xugao
 packages/react-internal/src/components/Stack/  @khmakoto
