--- a/packages/react-focus/package.json
+++ b/packages/react-focus/package.json
@@ -48,7 +48,9 @@
   "dependencies": {
     "@fluentui/keyboard-key": "^0.2.12",
     "@fluentui/merge-styles": "^8.0.0-beta.1",
+    "@fluentui/react-theme-provider": "^1.0.0-beta.9",
     "@fluentui/set-version": "^8.0.0-beta.0",
+    "@fluentui/style-utilities": "^8.0.0-beta.6",
     "@fluentui/utilities": "^8.0.0-beta.6",
     "tslib": "^1.10.0"
   },
