Disable grouped build output and fix the build issue (#16019)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ jobs:
 
       ## only do scoped bundle with PRs
       - script: |
-          yarn bundle --no-cache --grouped --since $(targetBranch)
+          yarn bundle --no-cache --since $(targetBranch)
         displayName: bundle (pr, scoped)
         condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
         env:
@@ -84,7 +84,7 @@ jobs:
 
       ## duplicated for master CI builds
       - script: |
-          yarn bundle --no-cache --grouped
+          yarn bundle --no-cache
         displayName: bundle (master)
         condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
         env:
@@ -169,7 +169,7 @@ jobs:
         displayName: yarn
 
       - script: |
-          yarn lage screener --to vr-tests --debug --verbose --no-cache --grouped
+          yarn lage screener --to vr-tests --debug --verbose --no-cache
         displayName: run VR Test
         env:
           SCREENER_API_KEY: $(screener.key)
