--- a/azure-pipelines.perf-test.yml
+++ b/azure-pipelines.perf-test.yml
@@ -24,7 +24,7 @@ steps:
 
   # @fluentui/perf-test needs build and bundle steps
   - script: |
-      yarn lage build --to @fluentui/perf-test --to perf-test --verbose --no-cache --grouped
+      yarn lage build --to @fluentui/perf-test --to perf-test --verbose --no-cache
     displayName: build  @fluentui v0
     env:
       BACKFILL_CACHE_PROVIDER: $(backfillProvider)
