Disabling perf-test temporarily to unblock CI (#16167)
* Disabling perf-test for now until Github account issue is resolved

* try again

--- a/azure-pipelines.perf-test.yml
+++ b/azure-pipelines.perf-test.yml
@@ -1,6 +1,8 @@
-pr:
-  - master
-  - website-content
+# Disabling perf-test until Github account issue is resolved.
+# pr:
+#   - master
+#   - website-content
+pr: none
 
 trigger: none
 
