Re-enable perf-test build (#16171)

--- a/azure-pipelines.perf-test.yml
+++ b/azure-pipelines.perf-test.yml
@@ -1,8 +1,6 @@
-# Disabling perf-test until Github account issue is resolved.
-# pr:
-#   - master
-#   - website-content
-pr: none
+pr:
+  - master
+  - website-content
 
 trigger: none
 
