feat(Tree): useVirtualTree hook + rewrite virtualizedTreePrototype using hook and react-window (#16080)
* useVirtualTree

* fix build

* clean cache size for variable sized list

* Revert "clean cache size for variable sized list"

This reverts commit 2d7ad0a52f5967e0cc76e62533ec92de7c86d4d7.

* fix unhandledProps warning

* virtual Tree accept items with height, similar like TMP

* add role=none to react window inner/outer wrapper

* Update packages/fluentui/docs/src/prototypes/VirtualizedTree/VirtualTree.tsx

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* Update packages/fluentui/docs/src/prototypes/VirtualizedTree/VirtualTree.tsx

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* Update packages/fluentui/react-northstar/src/components/Tree/hooks/useVirtualTree.ts

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* Update packages/fluentui/react-northstar/src/components/Tree/hooks/useVirtualTree.ts

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* Resolve comments

* Update packages/fluentui/docs/src/prototypes/VirtualizedTree/VirtualTree.tsx

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* nit

* Add change log

* Update packages/fluentui/docs/src/prototypes/VirtualizedTree/VirtualTree.tsx

Co-authored-by: ling1726 <lingfangao@hotmail.com>

* UT for useTree/useVirtualTree

* update UT

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>
Co-authored-by: ling1726 <lingfangao@hotmail.com>

--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -46,6 +46,7 @@
     "react-textarea-autosize": "7.0.0",
     "react-virtualized": "^9.21.1",
     "react-vis": "^1.11.6",
+    "react-window": "^1.8.6",
     "semver": "^6.2.0"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-virtualized": "^9.21.8",
+    "@types/react-window": "^1.8.2",
     "@types/webpack-env": "1.15.1",
     "gulp": "^4.0.2",
     "typescript": "3.7.2"
