--- a/packages/react-next/package.json
+++ b/packages/react-next/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.0.0-beta.26",
+    "@fluentui/react-button": "^1.0.0-beta.16",
     "@fluentui/font-icons-mdl2": "^8.0.0-beta.10",
     "@fluentui/set-version": "^8.0.0-beta.0",
     "@fluentui/utilities": "^8.0.0-beta.8",
