--- a/package.json
+++ b/package.json
@@ -162,7 +162,8 @@
           "@fluentui/date-time-utilities",
           "@fluentui/eslint-plugin",
           "@fluentui/react",
-          "@fluentui/react-compose"
+          "@fluentui/react-compose",
+          "stylis"
         ]
       }
     ]
