--- a/packages/make-styles/.eslintrc.json
+++ b/packages/make-styles/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["plugin:@fluentui/eslint-plugin/react"],
-  "root": true
+  "root": true,
+  "rules": {
+    "@typescript-eslint/naming-convention": "off"
+  }
 }
