--- a/azure-pipelines.vrt-pr.yml
+++ b/azure-pipelines.vrt-pr.yml
@@ -23,6 +23,9 @@ jobs:
     workspace:
       clean: all
     steps:
+      - checkout: self
+        fetchDepth: 0
+
       - template: .devops/templates/tools.yml
 
       - bash: |
@@ -73,6 +76,7 @@ jobs:
         env:
           SYSTEM_ACCESSTOKEN: $(System.AccessToken)
           BASELINE_PIPELINE_ID: $(BASELINE-PIPELINE-ID)
+        condition: eq(variables['vrTestSkip'], 'no')
 
       - bash: node node_modules/vrscreenshotdiff/lib/index.js pr --clientType "fluentuiv9" --buildId $(Build.BuildId) --lkgCIBuild $(LatestBuildId) --pipelineId $(pipelineId) --pipelineName '$(pipelineName)'
         displayName: 'Run fluentui-screenshotdiff'
@@ -87,6 +91,7 @@ jobs:
           STORAGE_KEY_FLUENTUI: $(STORAGE-KEY-BLOB-FLUENTUI)
           BLOB_CONNECTION_STRING: $(BLOB-CONNECTION-STRING)
           VR_APPROVAL_CLIENT_SECRET: $(VR-APPROVAL-CLIENT-SECRET)
+        condition: eq(variables['vrTestSkip'], 'no')
 
   - job: VisualRegressionTest_V8
     variables:
@@ -95,6 +100,9 @@ jobs:
     workspace:
       clean: all
     steps:
+      - checkout: self
+        fetchDepth: 0
+
       - template: .devops/templates/tools.yml
 
       - bash: |
@@ -145,6 +153,7 @@ jobs:
         env:
           SYSTEM_ACCESSTOKEN: $(System.AccessToken)
           BASELINE_PIPELINE_ID: $(BASELINE-PIPELINE-ID)
+        condition: eq(variables['vrTestSkip'], 'no')
 
       - bash: node node_modules/vrscreenshotdiff/lib/index.js pr --clientType "fluentuiv8" --buildId $(Build.BuildId) --lkgCIBuild $(LatestBuildId) --pipelineId $(pipelineId) --pipelineName '$(pipelineName)'
         displayName: 'Run fluentui-screenshotdiff'
@@ -159,3 +168,4 @@ jobs:
           STORAGE_KEY_FLUENTUI: $(STORAGE-KEY-BLOB-FLUENTUI)
           BLOB_CONNECTION_STRING: $(BLOB-CONNECTION-STRING)
           VR_APPROVAL_CLIENT_SECRET: $(VR-APPROVAL-CLIENT-SECRET)
+        condition: eq(variables['vrTestSkip'], 'no')
