Update variables in vrt pipeline to refer from variable group (#25696)

--- a/azure-pipelines.vrt-baseline.yml
+++ b/azure-pipelines.vrt-baseline.yml
@@ -32,11 +32,11 @@ jobs:
         displayName: 'Run Screenshotdiff update baseline'
         env:
           API_URL: $(System.CollectionUri)
-          API_TOKEN: $(TEST_PAT)
+          API_TOKEN: $(fabric-public-pipeline-access-PAT)
           API_REPOSITORY: $(Build.Repository.Name)
           API_PROJECT: $(System.TeamProject)
           SCREENSHOT_ARTIFACT_FOLDER: vrscreenshotv9
-          GITHUB_API_TOKEN: $(GITHUB_TEST_PAT)
+          GITHUB_API_TOKEN: $(githubRepoStatusPAT)
           STORAGE_ACCOUNT_FLUENTUI: $(STORAGE-ACCOUNT-FLUENTUI)
           STORAGE_KEY_FLUENTUI: $(STORAGE-KEY-BLOB-FLUENTUI)
           BLOB_CONNECTION_STRING: $(BLOB-CONNECTION-STRING)
@@ -59,11 +59,11 @@ jobs:
         displayName: 'Run Screenshotdiff update baseline'
         env:
           API_URL: $(System.CollectionUri)
-          API_TOKEN: $(TEST_PAT)
+          API_TOKEN: $(fabric-public-pipeline-access-PAT)
           API_REPOSITORY: $(Build.Repository.Name)
           API_PROJECT: $(System.TeamProject)
           SCREENSHOT_ARTIFACT_FOLDER: vrscreenshotv8
-          GITHUB_API_TOKEN: $(GITHUB_TEST_PAT)
+          GITHUB_API_TOKEN: $(githubRepoStatusPAT)
           STORAGE_ACCOUNT_FLUENTUI: $(STORAGE-ACCOUNT-FLUENTUI)
           STORAGE_KEY_FLUENTUI: $(STORAGE-KEY-BLOB-FLUENTUI)
           BLOB_CONNECTION_STRING: $(BLOB-CONNECTION-STRING)
