--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -31,6 +31,11 @@
     "@fluentui/scripts": "^1.0.0"
   },
   "dependencies": {
+    "@fluentui/react-context-selector": "^9.1.2",
+    "@fluentui/react-shared-contexts": "^9.1.1",
+    "@fluentui/react-aria": "^9.3.2",
+    "@fluentui/react-tabster": "^9.3.1",
+    "@fluentui/keyboard-keys": "^9.0.1",
     "@fluentui/react-theme": "^9.1.2",
     "@fluentui/react-utilities": "^9.2.2",
     "@griffel/react": "^1.4.2",
