--- a/packages/react-migration-v8-v9/tsconfig.lib.json
+++ b/packages/react-migration-v8-v9/tsconfig.lib.json
@@ -4,8 +4,8 @@
     "noEmit": false,
     "lib": ["ES2019", "dom"],
     "declaration": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist",
+    "declarationDir": "../../dist/out-tsc/types",
+    "outDir": "../../dist/out-tsc",
     "inlineSources": true,
     "types": ["static-assets", "environment"]
   },
