feat(scripts): enable strict checking for additional sub-folders(packages) v4 (#25710)
* feat(scripts): enable strict checking for create-* and normalize those under generator/ boundary

* feat(scripts): enable strict checking for install hoos and normalize those under package-manager/ boundary

* feat(scripts): remove unused config/ folder

* feat(scripts): create utils/ subpackage with strict type checking

* feat(scripts): move generators related modules under generators/

* chore(scripts): remove obsolete functionality/modules

* feat(scripts): move execution related modules under executors/

* generate changefiles

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Debug test",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/scripts/debug-test.js",
+      "program": "${workspaceRoot}/scripts/executors/debug-test.js",
       "cwd": "${fileDirname}",
       "stopOnEntry": false,
       "args": ["-i", "--watch"],
@@ -22,7 +22,7 @@
       "name": "Debug current open test",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/scripts/debug-test.js",
+      "program": "${workspaceRoot}/scripts/executors/debug-test.js",
       "cwd": "${fileDirname}",
       "stopOnEntry": false,
       "args": ["-i", "--testPathPattern=\\b${fileBasenameNoExtension}", "--watch"],
@@ -39,7 +39,7 @@
       "name": "Debug current open test (v0)",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/scripts/debug-test.js",
+      "program": "${workspaceRoot}/scripts/executors/debug-test.js",
       "cwd": "${fileDirname}",
       "stopOnEntry": false,
       "args": ["-i", "--testPathPattern=\\b${fileBasenameNoExtension}", "--watch"],
