--- a/scripts/tsconfig.scripts.json
+++ b/scripts/tsconfig.scripts.json
@@ -54,6 +54,12 @@
       "path": "./screener/tsconfig.json"
     },
     {
+      "path": "./generators/tsconfig.json"
+    },
+    {
+      "path": "./executors/tsconfig.json"
+    },
+    {
       "path": "./github/tsconfig.json"
     },
     {
@@ -76,6 +82,12 @@
     },
     {
       "path": "./fluentui-publish/tsconfig.json"
+    },
+    {
+      "path": "./package-manager/tsconfig.json"
+    },
+    {
+      "path": "./utils/tsconfig.json"
     },
     {
       "path": "./tsconfig.json"
