--- a/azure-pipelines.vrt-pr.yml
+++ b/azure-pipelines.vrt-pr.yml
@@ -56,6 +56,7 @@ jobs:
         displayName: 'Call policy State Api'
         env:
           VR_APPROVAL_CLIENT_SECRET: $(VR-APPROVAL-CLIENT-SECRET)
+          VR_APPROVAL_HOST: $(VR_APPROVAL_HOST)
 
       - template: .devops/templates/runpublishvrscreenshot.yml
         parameters:
@@ -93,6 +94,7 @@ jobs:
           VR_APPROVAL_CLIENT_SECRET: $(VR-APPROVAL-CLIENT-SECRET)
           GITHUB_REPO_OWNER: 'microsoft'
           GITHUB_REPO_NAME: 'fluentui'
+          VR_APPROVAL_HOST: $(VR_APPROVAL_HOST)
         condition: eq(variables['vrTestSkip'], 'no')
 
   - job: VisualRegressionTest_V8
@@ -135,6 +137,7 @@ jobs:
         displayName: 'Call policy State Api'
         env:
           VR_APPROVAL_CLIENT_SECRET: $(VR-APPROVAL-CLIENT-SECRET)
+          VR_APPROVAL_HOST: $(VR_APPROVAL_HOST)
 
       - template: .devops/templates/runpublishvrscreenshot.yml
         parameters:
@@ -172,4 +175,5 @@ jobs:
           VR_APPROVAL_CLIENT_SECRET: $(VR-APPROVAL-CLIENT-SECRET)
           GITHUB_REPO_OWNER: 'microsoft'
           GITHUB_REPO_NAME: 'fluentui'
+          VR_APPROVAL_HOST: $(VR_APPROVAL_HOST)
         condition: eq(variables['vrTestSkip'], 'no')
