chore: enable isolateModules in all v8 packages (#25774)
* chore: enable isolateModules in all packages

* generate changefiles

* feat: remove obsolete useTheme knob from storybook package that were causing isolateModules errors

--- a/packages/bundle-size/tsconfig.json
+++ b/packages/bundle-size/tsconfig.json
@@ -5,7 +5,8 @@
     "checkJs": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "isolatedModules": true
   },
   "include": ["src/**/*.js", "__fixture__/*.js"]
 }
