--- a/packages/cra-template/tsconfig.json
+++ b/packages/cra-template/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../scripts/tsconfig.json",
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": true,
+    "isolatedModules": true
   },
   "include": ["scripts"],
   "exclude": ["node_modules", "template"]
