--- a/packages/eslint-plugin/tsconfig.json
+++ b/packages/eslint-plugin/tsconfig.json
@@ -8,7 +8,8 @@
     "noUnusedLocals": true,
     "skipLibCheck": true,
     "strict": true,
-    "types": ["node"]
+    "types": ["node"],
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["**/fixtures/**/*"]
