--- a/packages/foundation-legacy/tsconfig.json
+++ b/packages/foundation-legacy/tsconfig.json
@@ -15,6 +15,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "preserveConstEnums": true,
+    "isolatedModules": true,
     "lib": ["es5", "dom", "ES2015.Iterable"],
     "typeRoots": ["../../node_modules/@types", "../../typings"],
     "types": ["jest", "custom-global"]
