--- a/packages/react-conformance/tsconfig.json
+++ b/packages/react-conformance/tsconfig.json
@@ -14,6 +14,7 @@
     "strict": true,
     "moduleResolution": "node",
     "preserveConstEnums": true,
+    "isolatedModules": true,
     "lib": ["es2017", "dom"],
     "types": ["jest", "node"]
   },
