--- a/packages/react-examples/tsconfig.json
+++ b/packages/react-examples/tsconfig.json
@@ -19,6 +19,7 @@
     "lib": ["es5", "dom", "es2015.promise"],
     "typeRoots": ["../../node_modules/@types", "../../typings"],
     "types": ["webpack-env", "custom-global", "node", "cypress", "cypress-storybook/cypress", "cypress-real-events"],
+    "isolatedModules": true,
     "paths": {
       "@fluentui/react-examples/lib/*": ["./src/*"],
       "@fluentui/react-examples": ["./src"]
