--- a/packages/fluentui/e2e/package.json
+++ b/packages/fluentui/e2e/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@fluentui/e2e",
-  "version": "0.64.0",
+  "version": "0.65.0",
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@fluentui/accessibility": "^0.64.0",
-    "@fluentui/react-icons-northstar": "^0.64.0",
-    "@fluentui/react-northstar": "^0.64.0",
-    "@fluentui/react-northstar-prototypes": "^0.64.0",
+    "@fluentui/accessibility": "^0.65.0",
+    "@fluentui/react": "^8.0.0",
+    "@fluentui/react-icons-northstar": "^0.65.0",
+    "@fluentui/react-northstar": "^0.65.0",
+    "@fluentui/react-northstar-prototypes": "^0.65.0",
     "@types/react-router-dom": "^5.1.5",
     "lerna-alias": "^3.0.3-0",
     "lodash": "^4.17.15",
-    "react-router-dom": "^5.2.0",
-    "@fluentui/react": "^8.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
