refactor(scripts): more domain boundaries encapsulation (#25851)
* refactor(scripts): move merge to /utils

* refactor(scripts): introduce barrel file to /puppeteer

* refactor(scripts): move eslint-constants to /monorepo

* refactor(scripts): introduce barrel file to /prettier

* refactor(scripts): make just.config.ts part of /tasks and rename it to index

* fixup! refactor(scripts): make just.config.ts part of /tasks and rename it to index

* generate changefiles

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bundlesizecollect": "node ./scripts/generators/bundle-size-collect",
     "change": "beachball change --no-commit",
     "check:change": "beachball check",
-    "check:modified-files": "yarn workspace @fluentui/scripts just check-for-modified-files",
+    "check:modified-files": "node -r ./scripts/ts-node-register ./scripts/executors/check-for-modified-files",
     "check:affected-package": "node ./scripts/monorepo/checkIfPackagesAffected.js",
     "check:installed-dependencies-versions": "satisfied --skip-invalid --ignore \"prettier|angular|lit|sass|@storybook/html|@storybook/mdx2-csf|svelte|@testing-library|vue|@cypress/react|cypress|@swc/wasm|@cactuslab/usepubsub\"",
     "clean": "lage clean --verbose",
@@ -33,7 +33,7 @@
     "create-package": "plop --plopfile ./scripts/generators/create-package/index.ts --dest . --require ./scripts/ts-node-register",
     "e2e": "lage e2e --verbose --concurrency=1",
     "format": "node scripts/executors/format.js",
-    "generate-version-files": "yarn workspace @fluentui/scripts just generate-version-files",
+    "generate-version-files": "node -r ./scripts/ts-node-register ./scripts/generators/generate-version-files",
     "graph": "node ./scripts/dependency-graph-generator/index.js",
     "lint": "lage lint --verbose",
     "lint:log": "FORCE_COLOR=0 yarn lint > lint.log 2>&1",
