--- a/packages/react-components/react-tabster/tsconfig.json
+++ b/packages/react-components/react-tabster/tsconfig.json
@@ -19,10 +19,7 @@
       "path": "./tsconfig.spec.json"
     },
     {
-      "path": "./.storybook/tsconfig.json"
-    },
-    {
-      "path": "./e2e/tsconfig.json"
+      "path": "./tsconfig.cy.json"
     }
   ]
 }
