Update vr screenshot diff version (#25916)

--- a/azure-pipelines.vrt-pr.yml
+++ b/azure-pipelines.vrt-pr.yml
@@ -95,6 +95,7 @@ jobs:
           GITHUB_REPO_OWNER: 'microsoft'
           GITHUB_REPO_NAME: 'fluentui'
           VR_APPROVAL_HOST: $(VR_APPROVAL_HOST)
+          VR_APP_NAME: $(VR_APP_NAME)
         condition: eq(variables['vrTestSkip'], 'no')
 
   - job: VisualRegressionTest_V8
@@ -176,4 +177,5 @@ jobs:
           GITHUB_REPO_OWNER: 'microsoft'
           GITHUB_REPO_NAME: 'fluentui'
           VR_APPROVAL_HOST: $(VR_APPROVAL_HOST)
+          VR_APP_NAME: $(VR_APP_NAME)
         condition: eq(variables['vrTestSkip'], 'no')
