--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -67,7 +67,7 @@
     "@fluentui/react-tabster": "^9.3.2",
     "@fluentui/react-textarea": "^9.1.7",
     "@fluentui/react-theme": "^9.1.3",
-    "@fluentui/react-toolbar": "9.0.0-beta.15",
+    "@fluentui/react-toolbar": "9.0.0-rc.0",
     "@fluentui/react-tooltip": "^9.1.3",
     "@fluentui/react-utilities": "^9.2.2",
     "@fluentui/react-text": "^9.1.8",
