--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -38,6 +38,7 @@
     "@fluentui/keyboard-keys": "^9.0.1",
     "@fluentui/react-theme": "^9.1.3",
     "@fluentui/react-utilities": "^9.2.2",
+    "@fluentui/react-icons": "^2.0.175",
     "@griffel/react": "^1.4.2",
     "tslib": "^2.1.0"
   },
