--- a/packages/react-components/react-table/package.json
+++ b/packages/react-components/react-table/package.json
@@ -30,6 +30,7 @@
     "@fluentui/scripts": "^1.0.0"
   },
   "dependencies": {
+    "@fluentui/keyboard-keys": "^9.0.1",
     "@fluentui/react-aria": "^9.3.2",
     "@fluentui/react-avatar": "^9.2.8",
     "@fluentui/react-checkbox": "^9.0.14",
