Add fluent2-theme to v8 (#25982)
* Added fluent2-theme package to v8

* yarn change

* Added fluent2-theme package to workspace

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -230,7 +230,7 @@ packages/react/src/components/WeeklyDayPicker @microsoft/fluent-date-time
 
 ## Theming and styling
 packages/react/src/utilities/ThemeProvider @microsoft/cxe-red @microsoft/cxe-coastal @dzearing
-
+packages/fluent2-theme @microsoft/cxe-red @microsoft/cxe-coastal @geoffcoxmsft
 ## Experiments
 packages/react-experiments/src/components/Signals @ThomasMichon
 packages/react-experiments/src/components/Tile @ThomasMichon
