--- a/apps/public-docsite/package.json
+++ b/apps/public-docsite/package.json
@@ -37,6 +37,7 @@
     "@fluentui/react-docsite-components": "^8.10.35",
     "@fluentui/react-examples": "^8.34.4",
     "@fluentui/react-experiments": "^8.14.30",
+    "@fluentui/fluent2-theme": "^8.103.8",
     "@fluentui/react-file-type-icons": "^8.8.3",
     "@fluentui/react-icons-mdl2": "^1.3.27",
     "@fluentui/react-icons-mdl2-branded": "^1.2.28",
