UI updates to the Alert Component (#25855)
* chore(react-field): migrate to new package structure (#25817)

* fixed alert styling

* yarn change

* Revert "chore(react-field): migrate to new package structure (#25817)"

This reverts commit 0d473c1235c1a90cb80e1f2eb1224f59acf97695.

* ui fixes

* update tokens

* using px instead of rem

* Update packages/react-components/react-alert/src/components/Alert/useAlertStyles.ts

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* Update change/@fluentui-react-alert-8a5ecb73-4cf7-422d-9df6-e2c5d0cacffd.json

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

* tabster

* update changelog to follow changelog guidelines

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

--- a/packages/react-components/react-alert/package.json
+++ b/packages/react-components/react-alert/package.json
@@ -34,6 +34,7 @@
     "@fluentui/react-avatar": "^9.2.8",
     "@fluentui/react-button": "^9.1.10",
     "@fluentui/react-icons": "^2.0.175",
+    "@fluentui/react-tabster": "^9.3.2",
     "@fluentui/react-theme": "^9.1.3",
     "@fluentui/react-utilities": "^9.2.2",
     "@griffel/react": "^1.4.2",
