--- a/packages/fluentui/react-northstar-fela-renderer/package.json
+++ b/packages/fluentui/react-northstar-fela-renderer/package.json
@@ -9,21 +9,22 @@
     "@fluentui/styles": "^0.65.0",
     "css-in-js-utils": "^3.0.0",
     "fela": "^10.6.1",
+    "fela-dom": "^11.7.0",
     "fela-plugin-embedded": "^10.6.1",
     "fela-plugin-fallback-value": "^10.6.1",
     "fela-plugin-placeholder-prefixer": "^10.6.1",
     "fela-plugin-rtl": "^10.6.1",
     "fela-tools": "^10.6.1",
-    "fela-utils": "^10.6.1",
+    "fela-utils": "^11.7.0",
     "inline-style-expand-shorthand": "^1.2.0",
     "lodash": "^4.17.15",
-    "react-fela": "^10.6.1",
     "stylis": "^3.5.4"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
     "@fluentui/scripts": "^1.0.0",
-    "lerna-alias": "^3.0.3-0"
+    "lerna-alias": "^3.0.3-0",
+    "react-fela": "^10.6.1"
   },
   "files": [
     "dist"
