Hoist theme tokens from @fluentui/react-theme to @fluentui/tokens (#25966)
* add package

* fix build, remove anything react

* move code from @fluentui/react-theme to @fluentui/tokens

* move token pipeline scripts from @fluentui/react-theme to @fluentui/tokens

* react-provider change file

* change files

* Apply suggestions from code review

Co-authored-by: Sean Monahan <seanmonahan@microsoft.com>

* Make @fluentui/tokens package public

* Changefile

* Address PR comments

* fix dependencies after master merge

* revert charting changes

* revert more lint changes

* update changefile

* disallow imports from react and @fluentui

Co-authored-by: Sean Monahan <seanmonahan@microsoft.com>

--- a/packages/tokens/.eslintrc.json
+++ b/packages/tokens/.eslintrc.json
@@ -1,4 +1,12 @@
 {
   "extends": ["plugin:@fluentui/eslint-plugin/react"],
-  "root": true
+  "root": true,
+  "rules": {
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": ["@fluentui/*", "react", "react-dom"]
+      }
+    ]
+  }
 }
