--- a/packages/react-components/react-theme/package.json
+++ b/packages/react-components/react-theme/package.json
@@ -21,7 +21,6 @@
     "start": "yarn storybook",
     "storybook": "start-storybook",
     "test": "jest --passWithNoTests",
-    "token-pipeline": "node -r ../../../scripts/ts-node-register ../../../scripts/generators/token-pipeline.ts",
     "type-check": "tsc -b tsconfig.json",
     "generate-api": "tsc -p ./tsconfig.lib.json --emitDeclarationOnly && just-scripts api-extractor"
   },
@@ -30,13 +29,8 @@
     "@fluentui/scripts": "^1.0.0"
   },
   "dependencies": {
-    "tslib": "^2.1.0"
-  },
-  "peerDependencies": {
-    "@types/react": ">=16.8.0 <19.0.0",
-    "@types/react-dom": ">=16.8.0 <19.0.0",
-    "react": ">=16.8.0 <19.0.0",
-    "react-dom": ">=16.8.0 <19.0.0"
+    "tslib": "^2.1.0",
+    "@fluentui/tokens": "1.0.0-alpha.1"
   },
   "beachball": {
     "disallowedChangeTypes": [
