--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -178,6 +178,7 @@ packages/react-migration-v8-v9 @microsoft/cxe-coastal @geoffcoxmsft
 packages/react-components/react-tree @microsoft/teams-prg
 packages/react-components/react-skeleton @microsoft/cxe-red
 packages/tokens @microsoft/teams-prg
+packages/react-components/react-tags @microsoft/cxe-coastal @TristanWatanabe
 # <%= NX-CODEOWNER-PLACEHOLDER %>
 
 
