--- a/packages/fluentui/perf/tsconfig.json
+++ b/packages/fluentui/perf/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../scripts/typescript/tsconfig.fluentui",
+  "extends": "../../../tsconfig.base.v0.json",
   "compilerOptions": {
     "module": "esnext",
     "types": ["node", "webpack-env"]
