--- a/packages/fluentui/styles/tsconfig.json
+++ b/packages/fluentui/styles/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": "../../../scripts/typescript/tsconfig.fluentui",
+  "extends": "../../../tsconfig.base.v0.json",
   "compilerOptions": {
     "composite": true,
     "strict": true,
-    "strictNullChecks": true,
     "outDir": "dist/dts"
   },
   "include": ["src", "test"],
