fix: Portals should render correctly in react 18 strict mode (#25956)
* fix: Portals should render correctly in react 18 strict mode

* add tests

* changefile

* use 1.0.0

* use layout effect

* useInsertionEffect

* 1.0.1

* update yarn lock

--- a/packages/react-components/react-portal/package.json
+++ b/packages/react-components/react-portal/package.json
@@ -34,7 +34,8 @@
     "@fluentui/react-tabster": "^9.3.4",
     "@fluentui/react-utilities": "^9.3.0",
     "@griffel/react": "^1.4.2",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "use-disposable": "^1.0.1"
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0 <19.0.0",
