--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -70,9 +70,9 @@
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "yarn lint --fix",
     "start": "gulp docs",
-    "screener:build": "yarn build:storybook",
     "start:profile": "cross-env NODE_ENV=production PERF=true gulp docs",
     "start:storybook": "start-storybook",
-    "test:component": "storywright  --browsers chromium --url dist/storybook --destpath dist/screenshots --waitTimeScreenshot 500 --concurrency 4 --headless true"
+    "vr:build": "yarn build:storybook",
+    "vr:test": "storywright  --browsers chromium --url dist/storybook --destpath dist/screenshots --waitTimeScreenshot 500 --concurrency 4 --headless true"
   }
 }
