refactor(scripts): separate `/storybook` and `/webpack` and introduce barrel api within `/webpack` (#26072)
* refactor(scripts): separate /storybook and /webpack and introduce barell api within /webpack

* generate change files

--- a/scripts/webpack/tsconfig.json
+++ b/scripts/webpack/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "types": ["node"]
   },
-  "include": ["*"]
+  "include": ["*"],
+  "files": ["../../typings/ignore-not-found-export-webpack-plugin/index.d.ts"]
 }
