--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@tsconfig/node14/tsconfig.json",
-  "include": ["./{apps,packages}/*/just.config.ts"]
+  "compilerOptions": {
+    "noEmit": true
+  },
+  "include": ["./apps/*/just.config.ts", "./packages/**/just.config.ts"],
+  "files": ["./typings/find-free-port/index.d.ts"]
 }
