--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
-    "@fluentui/react-storybook-addon": "^9.0.0-rc.1",
+    "@fluentui/react-storybook-addon": "9.0.0-rc.1",
     "@fluentui/scripts": "^1.0.0",
     "react-hook-form": "^5.7.2"
   },
