chore(scripts): introduce ts-node sub-package (#26109)
* chore(scripts): introduce ts-node sub-package

* generate change-files

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -84,6 +84,9 @@
       "path": "./utils/tsconfig.json"
     },
     {
+      "path": "./ts-node/tsconfig.json"
+    },
+    {
       "path": "./tsconfig.lib.json"
     }
   ]
